# docs/swagger.json
@@ -291,6 +291,25 @@
                 "summary": "账户管理"
             }
         },
+        "/auth/list": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "角色管理"
+                ],
+                "summary": "权限列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.RolePage"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/role": {
             "get": {
                 "produces": [
